src/objects/Sales_Credit_Claim__c.object
<CustomObject>
    <description>Created as part of TAL &amp; CC</description>
    <fields>
        <fullName>Amount_to_claim__c</fullName>
        <description>Created as part of TAL &amp; CC</description>
        <label>Amount to claim</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approving_AC__c</fullName>
        <description>Created as part of TAL &amp; CC</description>
        <label>Approving RC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Credit_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_FieldOps__c</fullName>
        <description>Created as part of TAL &amp; CC</description>
        <label>Approving FieldOps</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Credit_Claims3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_RSM__c</fullName>
        <description>Created as part of TAL &amp; CC</description>
        <label>Approving RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Credit_Claims1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>EVM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim_Reason__c</fullName>
        <label>Claim Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Missing Credit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Border</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLM Service Claim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Out</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Created as part of TAL &amp; CC</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Approver__c</fullName>
        <label>Current Approver</label>
        <picklist>
            <picklistValues>
                <fullName>SIP Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Transaction__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date of Transaction</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <label>Distributor Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVM_SCC_Id__c</fullName>
        <externalId>true</externalId>
        <label>EVM SCC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <label>End User Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo, The DRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia (local name: Hrvatska)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Timor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falkland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faroe Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gabon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <label>End User Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Invoice__c</fullName>
        <label>ID / Invoice</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Shipment__c</fullName>
        <label>Initial Shipment</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Reference_Number__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Number__c</fullName>
        <description>Created as part of TAL &amp; CC project</description>
        <displayFormat>{00000}</displayFormat>
        <label>Ref Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <formula>&quot;CC-&quot; &amp;  TEXT( Requestor__r.Theater__c )  &amp; &quot;-&quot; &amp;  Legacy_Reference_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor_Area_Controller__c</fullName>
        <description>Created as part of TAL &amp; CC project</description>
        <label>Requestor Region Controller</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requestor_Manager__c</fullName>
        <description>Created as part of TAL &amp; CC project</description>
        <label>Requestor Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <inlineHelpText>Person Claimed for will be prepopulated with Owner of the Sales Credit Claim. Please change the user if owner &amp; Person Claimed for are different.</inlineHelpText>
        <label>Person Claimed for</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Credit_Claims2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <description>Created as part of TAL &amp; CC project</description>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Created as part of TAL &amp; CC project</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Created as part of TAL &amp; CC project</description>
        <label>Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Deal_Amount__c</fullName>
        <description>created as part of TAL &amp; CC project</description>
        <label>Total Deal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Credit Claim</label>
    <nameField>
        <label>Sales Credit Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Credit Claims</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>